# novelsave_sources

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  README.md.mako  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/ISSUE_TEMPLATE/: source-request.md
.github/workflows/: automated-tests.yaml  tests.yml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/api/: crawler.rst  exceptions.rst  gateways.rst  models.rst  sources.rst  utilities.rst
docs/community/: code_of_conduct.rst  contributing.rst
docs/content/: api.rst  support.rst  usage.rst
docs/how_to/: access_point_functions.rst  sources.rst
docs/nss/ext/: source_list.py
docs/support/: rejected_sources.rst  supported_metadata_sources.rst  supported_novel_sources.rst
docs/usage/: basic_usage.rst  examples.rst  installation.rst
novelsave_sources/: __init__.py  exceptions.py  utils.py  version.py
novelsave_sources/models/: __init__.py  asset.py  chapter.py  metadata.py  novel.py  volume.py
novelsave_sources/sources/: __init__.py  crawler.py  rejected.py
novelsave_sources/sources/metadata/: __init__.py  __init__.py.mako  metasource.py  novelupdates.py  wlnupdates.py
novelsave_sources/sources/novel/: 1stkissnovel.py  __init__.py  __init__.py.mako  betwixtedbutterfly.py  boxnovel.py  boxnovel_com.py  cclawtranslations.py  chickengege.py  chrysagarden.py  creativenovels.py  domentranslations.py  dragontea.py  dummynovels.py  fanfiction.py  foxaholic.py  insanitycave.py  kieshitl.py  ktlchamber.py  lightnovelworld.py  mtlnovel.py  novelfull.py  novelfun.py  novelgate.py  novelhall.py  novelonlinefull.py  novelpassion.py  novelpub.py  novelsite.py  novelsonline.py  novelsrock.py  peachpitting.py  qidian.py  rainofsnow.py  readlightnovel.py  readlightnovel_me.py  readlightnovels_net.py  readnovelfull.py  royalroad.py  scribblehub.py  source.py  (+9 more)
novelsave_sources/utils/: __init__.py  cookies.py  gateways.py  helpers.py  http.py  mixins.py  parsers.py  sources.py  url_utils.py
requirements/: common.txt  dev.txt
static/: README.md  rejected.py
test/models/: test_novel.py
test/sources/novel/: source.py  test_rainofsnow.py
testing/: A Change of Plan (対策変更).html  Chapter 0.html  Encounter (遭遇).html  Entrance Ceremony (入学式).html  Everyone Will be Happy~! (みんなで幸せになるぞー！).html  I Don’t Need Any Followers, Really! (取り巻きなんかいらんっつーの).html  Side Story ~The Spiderwort's Discord~ (挿入話〜青花の争い〜).html  Sudden Rest (いきなり休み).html  The Actual Toughest Flag (実はいちばん手強いフラグ).html  Time to Go to the Academy! (いざ学園へ).html
tests/: test_utils.py
tests/models/: test_novel.py  test_volume.py
tests/sources/: test_crawler.py
tests/sources/metadata/: test_metasource.py
tests/sources/novel/: test_source.py
tests/utils/: test_helpers.py  test_mixins.py  test_sources.py  test_url_utils.py
tools/: compile.py  parse.py
