[tool.poetry]
name = "novelsave-sources"
version = "0.2.2"
description = "A collection of novel sources offering varying amounts of scraping capability."
authors = ["Mensch272 <47662901+mensch272@users.noreply.github.com>"]
maintainers = ["Mensch272 <47662901+mensch272@users.noreply.github.com>"]
repository = "https://github.com/mensch272/novelsave_sources"
license = "Apache-2.0"
readme = "README.md"
keywords = ["webnovel", "novel", "lightnovel", "scraper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment"
]

[tool.poetry.urls]
"Source Code" = "https://github.com/mensch272/novelsave_sources"
"Issue Tracker" = "https://github.com/mensch272/novelsave_sources/issues"
"Documentation" = "https://github.com/mensch272/novelsave_sources/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.6"
cloudscraper = "^1.2.58"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
deprecation = "^2.1.0"

[tool.poetry.dev-dependencies]
Mako = "^1.1.5"
click = "^8.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
