[tool.poetry]
name = "novelsave-sources"
version = "0.3.2"
description = "A collection of novel sources offering varying amounts of scraping capability."
authors = ["Mensch272 <47662901+mensch272@users.noreply.github.com>"]
maintainers = ["Mensch272 <47662901+mensch272@users.noreply.github.com>"]
repository = "https://github.com/mensch272/novelsave_sources"
license = "Apache-2.0"
readme = "README.md"
keywords = ["webnovel", "novel", "lightnovel", "scraper", "crawler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment"
]

[tool.poetry.urls]
"Source Code" = "https://github.com/mensch272/novelsave_sources"
"Issue Tracker" = "https://github.com/mensch272/novelsave_sources/issues"
"Documentation" = "https://novelsave-sources.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.8"
cloudscraper = "^1.2.58"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
deprecation = "^2.1.0"
sphinx_rtd_theme = { version = "^1.0.0", optional = true}
sphinx = { version = "^4.2.0", optional = true }


[tool.poetry.dev-dependencies]
Mako = "^1.1.5"
pytest = "^6.2.5"
pre-commit = "^2.15.0"
sphinx_rtd_theme = "^1.0.0"
sphinx = "^4.2.0"
pytest-cov = "^3.0.0"
tox = "^3.24.4"
pytest-mock = "^3.6.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "myst_parser"]

[tool.pytest.ini_options]
addopts = "--cov=novelsave_sources"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
