# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = novelsave-sources
version = attr: novelsave_sources.__version__
author = Mensch272
author_email = mhaisham79@gmail.com
description = A collection of novel sources offering varying amounts of scraping capability.
url = https://github.com/mensch272/novelsave_sources
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
platforms = any
keywords = webnovel novel lightnovel scraper
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
project_urls =
    Source Code = https://github.com/mensch272/novelsave_sources
    Issue Tracker = https://github.com/mensch272/novelsave_sources/issues
    Documentation = https://github.com/mensch272/novelsave_sources/blob/master/README.md

[options]
zip_safe = False
python_requires = >= 3.6
include_package_data = True
